[metadata]
name = tbhandler
version = 0.0.1
author = Quinten Roets
author_email = quinten.roets@gmail.com
description = automated extensive traceback visualization
description-file = README.md 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quintenroets/tbhandler
license = MIT

[options]
packages = find:
python_requires = >=3.10
package_dir =
    = .
install_requires =
    quinten-cli
    rich
    superpathlib
py_modules =
    sitecustomize

[options.entry_points]
console_scripts =
    investing = investing:main
    ask_open_exception_file = tbhandler.opener:main
    install_sitecustomize = tbhandler.sitecustomize_remover:main

[options.packages.find]
where = .


[bdist_wheel]
universal = true
